--- a/index.html
+++ b/index.html
@@ -44,7 +44,13 @@
       <link rel="stylesheet" href="styles/main.css">
   </head>
   <body>
-
+    
+    <!-- Import and configure the Firebase SDK -->
+    <!-- These scripts are made available when the app is served or deployed on Firebase Hosting -->
+    <!-- If you do not want to serve/host your project using Firebase Hosting see https://firebase.google.com/docs/web/setup -->
+    <script src="scripts/firebase.js"></script>
+    <script src="scripts/init.js"></script>
+    <script src="scripts/main.js"></script>
   </body>
   
 </html>
