--- a/email.html
+++ b/email.html
@@ -1,1 +1,12 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<title>Email Login</title>
+	<link rel="stylesheet" href="styles/style.css">
+</head>
+<body>
+	<h2>Email Loing</h2>
+</body>
+</html>
