--- a/index.html
+++ b/index.html
@@ -13,53 +13,61 @@
 -->
 <html lang="en">
 
-  <head>
-      <meta charset="utf-8">
-      <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <meta name="description" content="Learn how to use the Firebase platform on the Web">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
-      <title>FireChat</title>
-      <!-- Disable tap highlight on IE -->
-      <meta name="msapplication-tap-highlight" content="no">
-      <!-- Web Application Manifest -->
-      <link rel="manifest" href="manifest.json">
-      <!-- Add to homescreen for Chrome on Android -->
-      <meta name="mobile-web-app-capable" content="yes">
-      <meta name="application-name" content="FireChat">
-      <meta name="theme-color" content="#303F9F">
-      <!-- Add to homescreen for Safari on iOS -->
-      <meta name="apple-mobile-web-app-capable" content="yes">
-      <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-      <meta name="apple-mobile-web-app-title" content="FireChat">
-      <meta name="apple-mobile-web-app-status-bar-style" content="#303F9F">
-      <!-- Tile icon for Win8 -->
-      <meta name="msapplication-TileColor" content="#3372DF">
-      <meta name="msapplication-navbutton-color" content="#303F9F">
-      <!-- Material Design Lite -->
-      <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-      <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.orange-indigo.min.css">
-      <script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
-      <!-- App Styling -->
-      <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
-      <link rel="stylesheet" href="styles/main.css">
-  </head>
-  <body>
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Learn how to use the Firebase platform on the Web">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Data</title>
+    <!-- Disable tap highlight on IE -->
+    <meta name="msapplication-tap-highlight" content="no">
+    <!-- Web Application Manifest -->
+    <link rel="manifest" href="manifest.json">
+    <!-- Add to homescreen for Chrome on Android -->
+    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="application-name" content="Data">
+    <meta name="theme-color" content="#303F9F">
+    <!-- Add to homescreen for Safari on iOS -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="Data">
+    <meta name="apple-mobile-web-app-status-bar-style" content="#303F9F">
+    <!-- Tile icon for Win8 -->
+    <meta name="msapplication-TileColor" content="#3372DF">
+    <meta name="msapplication-navbutton-color" content="#303F9F">
+    <!-- Material Design Lite -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.1.3/material.orange-indigo.min.css">
+    <script defer src="https://code.getmdl.io/1.1.3/material.min.js"></script>
+    <!-- App Styling -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
+    <link rel="stylesheet" href="styles/main.css">
+    <link rel="shortcut icon" href="favicon.ico">
+    <link rel="precache" href="beep.mp3">
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/emojify.js/1.1.0/css/basic/emojify.min.css" />
+    <script src="//cdnjs.cloudflare.com/ajax/libs/emojify.js/1.1.0/js/emojify.min.js"></script>
+</head>
+
+<body>
     <div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-header">
         <!-- Header section containing logo -->
         <header class="mdl-layout__header mdl-color-text--white mdl-color--light-blue-700">
             <div class="mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-grid">
                 <div class="mdl-layout__header-row mdl-cell mdl-cell--12-col mdl-cell--12-col-tablet mdl-cell--12-col-desktop">
-                    <h3><i class="material-icons">chat_bubble_outline</i> FireChat</h3>
-                </div>
-                <div id="user-container">
-                    <div hidden id="user-pic"></div>
-                    <div hidden id="user-name"></div>
-                    <button hidden id="sign-out" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-color-text--white">
-                        Sign-out
-                    </button>
-                    <button hidden id="sign-in" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-color-text--white">
-                        <i class="material-icons">account_circle</i>Sign-in with Google
-                    </button>
+                    <div id="user-container">
+                        <div hidden id="user-pic"></div>
+                        <div hidden id="user-name"></div>
+                        <div hidden id="user-id"></div>
+                        <button hidden id="sign-out" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-color-text--white">
+                            Sign-out
+                        </button>
+                        <button hidden id="sign-in" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-color-text--white">
+                            <i class="material-icons">account_circle</i>Sign-in with Google
+                        </button>
+                        <!-- <button class="js-push-btn mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">
+                        Enable Push Messaging
+                                          </button> -->
+                    </div>
                 </div>
             </div>
         </header>
@@ -101,6 +109,7 @@
     <script src="scripts/firebase.js"></script>
     <script src="scripts/init.js"></script>
     <script src="scripts/main.js"></script>
-  </body>
-  
+    <script src="scripts/emoji.js"></script>
+</body>
+
 </html>
