--- a/profile.html
+++ b/profile.html
@@ -134,6 +134,9 @@
         </div>
       </main>
     </div>
-    <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <script src="scripts/material.min.js"></script>
+    <script src="scripts/firebase.js"></script>
+    <script src="scripts/init.js"></script>
+    <script src="scripts/main.js"></script>
   </body>
 </html>
