--- a/profile.html
+++ b/profile.html
@@ -47,81 +47,71 @@
     <!-- Material Design Lite -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
      <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.grey-indigo.min.css" /> 
+    <link rel="stylesheet" href="https://unpkg.com/material-components-web@0.12.1/dist/material-components-web.min.css">
     <!-- App Styling -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
     <link rel="stylesheet" href="styles/main.css">
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="precache" href="beep.mp3">
-  </head>
   <body>
-    <div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-drawer mdl-layout--fixed-header">
-      <header class="demo-header mdl-layout__header mdl-color--grey-100 mdl-color-text--grey-600">
+    <div class="mdl-layout mdl-js-layout mdl-layout--fixed-drawer mdl-layout--fixed-header">
+      <header class="mdl-layout__header mdl-color--grey-100 mdl-color-text--white-600">
         <div class="mdl-layout__header-row">
-          <span class="mdl-layout-title">Home</span>
+          <h3>FireChat</h3>
           <div class="mdl-layout-spacer"></div>
           <button id="sign-in" class="mdl-button mdl-js-button mdl-js-ripple-effect">
-              <i class="material-icons">account_circle</i>Sign-in with Google
+            <i class="material-icons">account_circle</i>Sign-in with Google
+          </button>
+          <button hidden id="sign-out" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-color-text--black">
+              Sign out
           </button>
         </div>
       </header>
       <div class="demo-drawer mdl-layout__drawer mdl-color--blue-grey-900 mdl-color-text--blue-grey-50">
         <header class="demo-drawer-header">
-          <img src="images/user.jpg" class="demo-avatar"><div hidden id="user-pic"></div>
+          <div hidden id="user-pic"></div>
           <div class="demo-avatar-dropdown">
             <span><div hidden id="user-name"></div></span>
             <div class="mdl-layout-spacer"></div>
-            <button id="accbtn" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-button--icon">
-              <i class="material-icons" role="presentation">arrow_drop_down</i>
-              <span class="visuallyhidden">Accounts</span>
-            </button>
-            <ul class="mdl-menu mdl-menu--bottom-right mdl-js-menu mdl-js-ripple-effect" for="accbtn">
-              <li hidden class="mdl-menu__item"><div hidden id="user-id"></div></li>
-              <li class="mdl-menu__item"><button hidden class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-color-text--white">Sign-out</button></li>
-            </ul>
+            <div hidden id="user-id"></div>
           </div>
         </header>
         <nav class="demo-navigation mdl-navigation mdl-color--blue-grey-800">
           <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">home</i>Home</a>
           <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">inbox</i>Inbox</a>
-          <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">people</i>Social</a>
+          <!-- <a class="mdl-navigation__link" href=""><i class="mdl-color-text--blue-grey-400 material-icons" role="presentation">people</i>Social</a> -->
           <div class="mdl-layout-spacer"></div>
         </nav>
       </div>
-      <main class="mdl-layout__content mdl-color--grey-100">
-        <div class="mdl-grid demo-content">
-          <div class="demo-cards mdl-cell mdl-cell--4-col mdl-cell--8-col-tablet mdl-grid mdl-grid--no-spacing">
-
-            <div id="messages-card-container" class="mdl-cell mdl-cell--12-col mdl-grid">
-                <!-- Messages container -->
-                <div id="messages-card" class="mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--6-col-tablet mdl-cell--6-col-desktop">
-                    <div class="mdl-card__supporting-text mdl-color-text--grey-600">
-                        <div id="messages">
-                            <span id="message-filler"></span>
-                        </div>
-                        <form id="message-form" action="#">
-                            <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
-                                <input class="mdl-textfield__input" type="text" id="message">
-                                <label class="mdl-textfield__label" for="message">Message...</label>
-                            </div>
-                            <button id="submit" disabled type="submit" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">
-                                Send
-                            </button>
-                        </form>
-                        <form id="image-form" action="#">
-                            <input id="mediaCapture" type="file" accept="image/*,capture=camera">
-                            <button id="submitImage" title="Add an image" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--amber-400 mdl-color-text--white">
-                                <i class="material-icons">image</i>
-                            </button>
-                        </form>
+      <main class="mdl-layout__content mdl-color--black-100">
+        <div id="messages-card-container" class="mdl-cell mdl-cell--12-col mdl-grid">
+            <!-- Messages container -->
+            <div id="messages-card" class="mdl-card mdl-shadow--2dp mdl-cell mdl-cell--12-col mdl-cell--6-col-tablet mdl-cell--12-col-desktop">
+                <div class="mdl-card__supporting-text mdl-color-text--grey-600">
+                    <div id="messages">
+                        <span id="message-filler"></span>
                     </div>
-                </div>
-                <div id="must-signin-snackbar" class="mdl-js-snackbar mdl-snackbar">
-                    <div class="mdl-snackbar__text"></div>
-                    <button class="mdl-snackbar__action" type="button"></button>
+                    <form id="message-form" action="#">
+                        <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+                            <input class="mdl-textfield__input" type="text" id="message">
+                            <label class="mdl-textfield__label" for="message">Message...</label>
+                        </div>
+                        <button id="submit" disabled hidden type="submit" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect">
+                            Send
+                        </button>
+                    </form>
+                    <form id="image-form" action="#">
+                        <input id="mediaCapture" type="file" accept="image/*,capture=camera">
+                        <button id="submitImage" title="Add an image" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-color--amber-400 mdl-color-text--white">
+                            <i class="material-icons">image</i>
+                        </button>
+                    </form>
                 </div>
             </div>
-
-          </div>
+            <div id="must-signin-snackbar" class="mdl-js-snackbar mdl-snackbar">
+                <div class="mdl-snackbar__text"></div>
+                <button class="mdl-snackbar__action" type="button"></button>
+            </div>
         </div>
       </main>
     </div>
