--- a/profile.html
+++ b/profile.html
@@ -48,13 +48,17 @@
 
     <!-- Material Design Lite -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.grey-indigo.min.css" /> 
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.grey-indigo.min.css" /> 
     <link rel="stylesheet" href="https://unpkg.com/material-components-web@0.12.1/dist/material-components-web.min.css">
     <!-- App Styling -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:regular,bold,italic,thin,light,bolditalic,black,medium&amp;lang=en">
     <link rel="stylesheet" href="styles/main.css">
     <link rel="shortcut icon" href="favicon.ico">
     <link rel="precache" href="beep.mp3">
+    <link rel="preload" href="scripts/material.min.js" as="script">
+    <link rel="preload" href="scripts/firebase.js" as="script">
+    <link rel="preload" href="scripts/init.js" as="script">
+    <link rel="preload" href="scripts/main.js" as="script">
   <body>
     <div class="mdl-layout mdl-js-layout mdl-layout--fixed-drawer mdl-layout--fixed-header">
       <header class="mdl-layout__header mdl-color--grey-100 mdl-color-text--white-600">
